# prompt-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yaml  release.yaml  test.yaml
sample_configs/: gcc.yaml
src/prompt_cli/: __init__.py  cli.py
src/prompt_cli/config/: __init__.py  defaults.py  loader.py  schema.py
src/prompt_cli/core/: __init__.py  color.py  matcher.py  programs.py  tokenizer.py
src/prompt_cli/editor/: __init__.py  commands.py  completer.py  keybindings.py  lexer.py  prompt.py
src/prompt_cli/editor/modes/: __init__.py  duplicates.py
src/prompt_cli/validators/: __init__.py  base.py  choice.py  custom.py  file.py  warnings.py
tests/: conftest.py  test_commands.py  test_completer.py  test_config.py  test_duplicates.py  test_lexer.py  test_matcher.py  test_programs.py  test_tokenizer.py
